--- a/src/main/resources/templates/test.html
+++ b/src/main/resources/templates/test.html
@@ -9,14 +9,13 @@
 </head>
 <body>
 <div>
-    <canvas id="mapCanvas"></canvas>
-    <img id="mapImage">
+    <div id="pubgMap"></div>
 </div>
 
 </body>
 <script>
 
-    const pubgMap = new PubgMap("mapCanvas", "mapImage", 1000, 1000, mapConstant.source.SANHOK);
+    const pubgMap = new PubgMap("pubgMap", 1000, 1000, mapConstant.source.SANHOK);
     pubgMap.drawPosition(0.5, 0.5, 1, 19);
     pubgMap.drawPosition(0.4, 0.6, 2, 30);
     const list = [[0.1, 0.1], [0.2, 0.2], [0.3, 0.5], [0.6, 0.4], [0.6, 0.6]];
