--- a/src/main/resources/templates/test.html
+++ b/src/main/resources/templates/test.html
@@ -73,12 +73,12 @@
 </body>
 <script>
 
-    const pubgMap = new PubgMap("pubgMap", 800, 800, mapConstant.source.SANHOK);
-
-    pubgMap.drawPosition(0.5, 0.5, 1, 19);
-    pubgMap.drawPosition(0.4, 0.6, 2, 30);
-    let list = [[0.1, 0.1], [0.2, 0.2], [0.3, 0.5], [0.6, 0.4], [0.6, 0.6]];
-    pubgMap.drawPath(list, 1)
+    // const pubgMap = new PubgMap("pubgMap", 800, 800, mapConstant.source.SANHOK);
+    //
+    // pubgMap.drawPosition(0.5, 0.5, 1, 19);
+    // pubgMap.drawPosition(0.4, 0.6, 2, 30);
+    // let list = [[0.1, 0.1], [0.2, 0.2], [0.3, 0.5], [0.6, 0.4], [0.6, 0.6]];
+    // pubgMap.drawPath(list, 1)
 
     const teamList = new TeamList("teamList", true);
     let teamListData = [
@@ -88,7 +88,7 @@
         },
         {
             teamId: 1,
-            playerName: "player2"
+            playerName: "playerasdadasdaasdadwawdwadawdwada2"
         },
         {
             teamId: 2,
