--- a/src/main/resources/templates/track.html
+++ b/src/main/resources/templates/track.html
@@ -51,7 +51,9 @@
 
 </body>
 <script>
-    const pubgMap = new PubgMap("pubgMap", 800, 800);
+    const WIDTH = 800;
+    const HEIGHT = 800;
+    const pubgMap = new PubgMap("pubgMap", WIDTH, HEIGHT);
     const teamList = new TeamList("teamList", true);
 
     const baseUrl = "/pubg";
@@ -77,7 +79,7 @@
                     trackData = e;
                     $("#timeRange").attr("max", e.end).removeAttr("disabled").val(0);
                     //载入地图
-                    pubgMap.setBackgroundMap(mapConstant.source[e.mapType], 800, 800);
+                    pubgMap.setBackgroundMap(mapConstant.source[e.mapType], WIDTH, HEIGHT);
                     //载入玩家列表
                     const characters = [];
                     for (let c in e.characters) {
@@ -86,7 +88,6 @@
                     teamList.load(characters);
                     drawInstantContent(0);
 
-                    console.log("finish")
                     $("#globalSpinner").css("display", "none");
                 }
             }
@@ -106,11 +107,28 @@
      */
     function drawInstantContent(instant) {
         pubgMap.clear();
+
+        //游戏状态
+        drawGameState(instant);
+
         if (instant == 0) {
+            //个人路线
             drawPersonalTrackLine();
             return;
         }
 
+        //时间维度位置点
+        drawPlayerPositions(instant);
+
+        //绘制时间
+        pubgMap.displayTime(instant);
+
+    }
+
+    /**
+     * 时间维度位置点
+     */
+    function drawPlayerPositions(instant) {
         let DRAW_NAME = true;
 
         //遍历玩家
@@ -158,8 +176,6 @@
 
             }
         }
-
-
     }
 
     /**
@@ -175,6 +191,34 @@
             pubgMap.drawPath(lineData, teamId);
 
         }
+    }
+
+    /**
+     * 绘制游戏状态
+     * @param instant 时刻
+     */
+    function drawGameState(instant) {
+
+        // debugger;
+        let gameState = undefined;
+        for (let time = instant; time > 0; time--) {
+            gameState = trackData.gameState[time];
+            if (gameState !== undefined) {
+                break;
+            }
+        }
+
+        if (gameState === undefined) {
+            return;
+        }
+
+        //篮圈
+        const safety = gameState.safetyZonePosition;
+        pubgMap.drawSafetyZone(safety.xratio, safety.yratio, gameState.safetyZoneRadius);
+
+        //白圈
+        const gas = gameState.poisonGasWarningPosition;
+        pubgMap.drawGasWarningZone(gas.xratio, gas.yratio, gameState.poisonGasWarningRadius);
     }
 
 
