修复闪烁问题

--- a/src/main/resources/templates/track.html
+++ b/src/main/resources/templates/track.html
@@ -142,7 +142,7 @@
 
             let instantValue = trackData.positions[instant];
             if (!instantValue) {
-                continue;
+                instantValue = {};
             }
 
             let characterPos = instantValue[accountId];
