--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -22,6 +22,8 @@
             elem: '#match'
             ,id: 'match'
             ,url: '/pubg/match/findMatchPageByPlayerName'
+            ,method: 'POST'
+            ,contentType: 'application/json'
             ,page: true
             ,limits : [10,20,30,40,50]
             ,limit : 10
@@ -45,7 +47,7 @@
                         }
                     }}
                     ,{field:'mapName', width:120, title: '地图名称',style:'text-align: center;'}
-                    ,{field:'gameMode', width:100, title: '游戏模式',style:'text-align: center;'}
+                    ,{field:'gameMode', width:100, title: '小队模式',style:'text-align: center;'}
                     ,{field:'createTime', width:180, title: '对局时间',style:'text-align: center;'}
                     ,{fixed:'right', width:200, title: '操作',style:'text-align: left;', templet:function (data) {
                         if(data.fetchLog === 1){
