--- a/src/main/resources/templates/match.html
+++ b/src/main/resources/templates/match.html
@@ -7,89 +7,146 @@
     <link rel="stylesheet" href="layui/css/layui.css">
     <script src="js/lib/jquery-3.5.1.min.js"></script>
     <script src="layui/layui.js"></script>
+    <script src="js/util/Table.js"></script>
+    <!--<script src="layui/lay/modules/layer.js"></script>-->
 </head>
 <body>
 
-    <div th:replace="header :: detail"></div>
-    <p th:text="'Hello！, ' + ${matchId} + '!'"></p>
-    <div class="layui-row layui-col-space15">
-        <div class="layui-col-md2 layui-card">
-            <div class="layui-card-header">耗时</div>
-            <div class="layui-card-body">
-                12
-            </div>
-        </div>
-
-        <div class="layui-col-md2 layui-card">
-            <div class="layui-card-header">自定义模式</div>
-            <div class="layui-card-body">
-                否
-            </div>
-        </div>
-
-        <div class="layui-col-md2 layui-card">
-            <div class="layui-card-header">地图</div>
-            <div class="layui-card-body">
-                雨林
-            </div>
-        </div>
-
-        <div class="layui-col-md2 layui-card">
-            <div class="layui-card-header">小队模式</div>
-            <div class="layui-card-body">
-                四排
-            </div>
-        </div>
-
-        <div class="layui-col-md2 layui-card">
-            <div class="layui-card-header">拉取日志</div>
-            <div class="layui-card-body">
-                已拉取
-            </div>
-        </div>
-
-        <div class="layui-col-md2 layui-card">
-            <div class="layui-card-header">对局时间</div>
-            <div class="layui-card-body">
-                2020-07-20 15:13:43
+<div th:replace="header :: detail"></div>
+<p th:text="'Hello' + ${playerName} + ', ' + ${matchId} + '!'"></p>
+<div class="layui-row">
+    <div class="layui-form">
+        <div class="layui-form-item">
+            <div class="layui-inline">
+                <div class="layui-input-inline"><input id="matchId" th:value="${matchId}" type="text" class="layui-input" placeholder="matchId"></div>
+                <div class="layui-input-inline"><input id="playerName" th:value="${playerName}" type="text" class="layui-input" placeholder="playerName"></div>
+                <button type="button" onclick="findMatchDetailByMatchIdAndPlayerName()" class="layui-btn layui-btn-primary"><i class="layui-icon layui-icon-search"></i> Search</button>
             </div>
         </div>
     </div>
+</div>
+<div class="layui-row layui-col-space15">
+    <div class="layui-col-md2 layui-card">
+        <div class="layui-card-header">耗时</div>
+        <div class="layui-card-body">
+            <p id="duration"></p>
+        </div>
+    </div>
 
-    <table id="me" class="layui-table-hover"></table>
+    <div class="layui-col-md2 layui-card">
+        <div class="layui-card-header">自定义模式</div>
+        <div class="layui-card-body">
+            <p id="customMatch"></p>
+        </div>
+    </div>
+
+    <div class="layui-col-md2 layui-card">
+        <div class="layui-card-header">地图</div>
+        <div class="layui-card-body">
+            <p id="mapName"></p>
+        </div>
+    </div>
+
+    <div class="layui-col-md2 layui-card">
+        <div class="layui-card-header">小队模式</div>
+        <div class="layui-card-body">
+            <p id="gameMode"></p>
+        </div>
+    </div>
+
+    <div class="layui-col-md2 layui-card">
+        <div class="layui-card-header">拉取日志</div>
+        <div class="layui-card-body">
+            <p id="fetchLog"></p>
+        </div>
+    </div>
+
+    <div class="layui-col-md2 layui-card">
+        <div class="layui-card-header">对局时间</div>
+        <div class="layui-card-body">
+            <p id="createTime"></p>
+        </div>
+    </div>
+</div>
+
+<table id="me" class="layui-table layui-table-hover"></table>
+<table id="team" class="layui-table layui-table-hover"></table>
+<table id="all" class="layui-table layui-table-hover"></table>
 </body>
 <script>
-    var matchTable;
-    layui.use('table',function () {
-        matchTable = layui.table;
-        matchTable.render({
-            elem: '#me'
-            ,data: '[{"matchId":"123345","duration":3,"customMatch":1,"mapName":"雨林","gameMode":"四排","createTime":"2020-07-20 15:13:43"}]'
-            ,cols: [
-                [
-                    {field:'matchId', minWidth:70, title: '对局ID',style:'text-align: left;'}
-                    ,{field:'duration', width:100, title: '持续时间',style:'text-align: center;'}
-                    ,{field:'customMatch', width:100, title: '自定义对局',style:'text-align: center;',templet:function (data) {
-                        if(data.customMatch === 1){
-                            return '是';
-                        }else{
-                            return '否';
-                        }
-                    }}
-                    ,{field:'mapName', width:120, title: '地图名称',style:'text-align: center;'}
-                    ,{field:'gameMode', width:100, title: '游戏模式',style:'text-align: center;'}
-                    ,{field:'createTime', width:180, title: '对局时间',style:'text-align: center;'}
-                    ,{fixed:'right', width:200, title: '操作',style:'text-align: left;', templet:function (data) {
-                        if(data.fetchLog === 1){
-                            return "<button onclick='repay(" + data.id + ")' class='layui-btn layui-btn-sm layui-btn-normal'>对局详情</button><a href='/findPlz_manager/delete?id=" + data.id + "' class='layui-btn layui-btn-sm layui-btn-danger'>对局日志</a>";
-                        }else{
-                            return "<button onclick='repay(" + data.id + ")' class='layui-btn layui-btn-sm layui-btn-normal'>对局详情</button>";
-                        }
-                    }}
-                ]
-            ]
-        });
+    var layer;
+    layui.use('layer',function () {
+        layer = layui.layer;
     });
+    // 定义表头映射
+    var mapper = {
+        "playerName":"昵称"
+        ,"teamId":"团队"
+        ,"kills":"击杀"
+        ,"headshotKills":"爆头"
+        ,"winPlace":"排名"
+        ,"heals":"治疗次数"
+        ,"walkDistance":"跑步距离"
+        ,"longestKill":"最远击杀距离"
+        ,"vehicleDestroys":"摧毁载具"
+        ,"rideDistance":"驾车距离"
+        ,"deathType":"死亡原因"
+        ,"revives":"复活队友"
+        ,"assists":"助攻"
+        ,"killStreaks":"连杀"
+        ,"swimDistance":"游泳距离"
+        ,"weaponsAcquired":"获得武器"
+        ,"roadKills":"撞死人数"
+        ,"boosts":"饮料加速"
+        ,"timeSurvived":"存活时间"
+        ,"damageDealt":"造成伤害"
+        ,"teamKills":"团队击杀"
+    };
+    /**
+     * 进页面先触发一次
+     * */
+    findMatchDetailByMatchIdAndPlayerName();
+    function findMatchDetailByMatchIdAndPlayerName() {
+        let matchId = $("#matchId").val();
+        if(!matchId){
+            return;
+        }
+        let playerName = $("#playerName").val();
+        let url = playerName?"/pubg/match/findMatchDetailByMatchIdAndPlayerName":"/pubg/match/findMatchDetailByMatchId";
+        // 请求
+        $.ajax({
+            url: url,
+            type: 'post',
+            data: JSON.stringify({"matchId":matchId, "playerName":playerName}),
+            contentType: 'application/json',
+            success: (result) => {
+                console.log(result);
+                if(result.status === 0){
+                    /** 请求成功,铺上数据 **/
+                    // 比赛细节
+                    let detail = result.data.match;
+                    // 比赛耗时
+                    $("#duration").html(detail.durationStr);
+                    // 是否自定义比赛
+                    $("#customMatch").html(detail.customMatchStr);
+                    // 地图名称
+                    $("#mapName").html(detail.mapName);
+                    // 小队模式
+                    $("#gameMode").html(detail.gameMode);
+                    // 是否已拉取日志
+                    $("#fetchLog").html(detail.fetchLogStr);
+                    // 比赛创建时间
+                    $("#createTime").html(detail.createTime);
+                    objectCreateTable("#me", mapper, result.data.matchPlayer);
+                    listCreateTable("#team", mapper, result.data.teamPlayers);
+                    listCreateTable("#all", mapper, result.data.matchPlayers);
+                    layer.msg("请求成功",{icon:6});
+                }else{
+                    layer.msg(result.statusDesc,{icon:5});
+                }
+            }
+        });
+    }
 
 </script>
 </html>
